--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -25,58 +25,24 @@ endif
 
 SRC = \
 	ft_atoi\
-	ft_itoa\
 	ft_memalloc\
-	ft_memccpy\
-	ft_memchr\
-	ft_memcmp\
 	ft_memcpy\
 	ft_memdel\
-	ft_memmove\
 	ft_memset\
-	ft_putchar\
-	ft_putchar_fd\
-	ft_putendl\
-	ft_putendl_fd\
-	ft_putnbr\
-	ft_putnbr_fd\
-	ft_putstr\
-	ft_putstr_fd\
 	ft_revbytes\
 	ft_stpcpy\
 	ft_stpncpy\
-	ft_strcapitalize\
-	ft_strcat\
 	ft_strchr\
-	ft_strclr\
 	ft_strcmp\
 	ft_strcpy\
-	ft_strdel\
 	ft_strdup\
-	ft_strequ\
-	ft_strjoin\
-	ft_strlcat\
-	ft_strlcpy\
 	ft_strlen\
-	ft_strlowcase\
-	ft_strncat\
 	ft_strncmp\
 	ft_strncpy\
-	ft_strndup\
-	ft_strnequ\
-	ft_strnew\
 	ft_strnlen\
-	ft_strnstr\
-	ft_strrchr\
-	ft_strrev\
 	ft_strsplit\
-	ft_strstr\
 	ft_strsub\
-	ft_strtrim\
-	ft_strupcase\
-	ft_isdigit\
-	ft_isspace\
-	ft_strsplit2
+	ft_strupcase
 
 # [ PRINTF ]
 
@@ -100,15 +66,8 @@ SRC += \
 	memmgr/ft_mchain\
 	memmgr/ft_mladd\
 	memmgr/ft_mlalloc\
-	memmgr/ft_mlappend\
-	memmgr/ft_mlarray\
-	memmgr/ft_mldel\
-	memmgr/ft_mlfind\
 	memmgr/ft_mlpop\
-	memmgr/ft_mlremove\
-	memmgr/ft_mlrev\
-	memmgr/ft_mlsize\
-	memmgr/ft_mlxfer
+	memmgr/ft_mlrev
 
 # [ OTHER ]
 
