Implement process scheduler, making vm 600% faster than previous version

--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -11,7 +11,7 @@ AS = nasm
 ASFLAGS += -f macho64
 CC = gcc
 CFLAGS += -Wall -Werror -Wextra
-CFLAGS += -Ofast
+CFLAGS += -Ofast -funroll-loops
 CFLAGS += #-g -fsanitize=address
 INC = -I inc
 SRC_DIR = src
